--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<hello name="{{ name }}"></hello>
-<p>
-  Start editing to see some magic happen :)
-</p>
+<section class="hero is-fullheight">
+  <div class="hero-body">
+      <div class="container has-text-centered">
+          <div class="column is-4 is-offset-4">
+            <img alt="NullData - Logo" src="./assets/img/logo.jpg">
+
+            <router-outlet></router-outlet>
+              
+
+          </div>
+      </div>
+  </div>
+</section>
+
