--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="hero-body">
       <div class="container has-text-centered">
           <div class="column is-4 is-offset-4">
-            <img alt="NullData - Logo" src="./assets/img/logo.jpg">
+            <img alt="NullData - Logo" src="https://cdn.jsdelivr.net/gh/angelmartz/angular-stackbliz@master/src/assets/img/logo.jpg">
 
             <router-outlet></router-outlet>
               
